[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Options.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Credits.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -92.0

[node name="Start" type="Button" parent="Buttons"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="Options" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="Credits" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Credits"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Quit"

[node name="Options" parent="." instance=ExtResource( 2 )]

[node name="Credits" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -127.0
margin_right = 149.0
margin_bottom = 127.0

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="options_saved" from="Options" to="." method="_on_Options_options_saved"]
[connection signal="credits_dismissed" from="Credits" to="." method="_on_Credits_credits_dismissed"]
